# Physics-Arena

./: .gitattributes  .gitignore  README.md  SOURCES.md  bench.sh
config/: cases.json  engines.json  reports.json
release/windows-x64/: manifest.json
release/windows-x64/avian3d/: artifact-manifest.json
release/windows-x64/bepuphysics2/: BepuPhysics2.PolygonRunner.deps.json  BepuPhysics2.PolygonRunner.runtimeconfig.json  artifact-manifest.json
release/windows-x64/box3d/: artifact-manifest.json
release/windows-x64/joltphysics/: artifact-manifest.json
release/windows-x64/nvidia-physx-3.4/: artifact-manifest.json
release/windows-x64/nvidia-physx-5.6/: artifact-manifest.json
release/windows-x64/physx34/: artifact-manifest.json
release/windows-x64/rapier3d/: artifact-manifest.json
release/windows-x64/shared_visual_renderer/: artifact-manifest.json
release/windows-x64/unity_physics/: artifact-manifest.json  build-provenance.json  player-build-metadata.json
release/windows-x64/unity_physics/BenchmarkPolygonUnityPhysics_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets
release/windows-x64/unity_physics/BenchmarkPolygonUnityPhysics_Data/Resources/: unity_builtin_extra
release/windows-x64/unreal_chaos/: BenchmarkPolygonChaosRunner-Win64-Shipping.target  artifact-manifest.json
results/: README.md
results/box-container-pile-10k/: README.md
results/box-container-pile-10k/intel-core-i7-13700k/: README.md
results/box-container-pile-10k/intel-core-i7-13700k/2026-07-09_0112_ddr5-4800_threads-1-2-3-4-5-6-8-16-24_r10/: manifest.json  normalized.csv  report.md  summary.csv
results/box-container-pile-10k/intel-core-i7-13700k/2026-07-09_1700_ddr5-4800_threads-1-3-4-5-6-8-16-24_r1/: manifest.json  normalized.csv  report.md  summary.csv
src/avian3d/: engine.json
src/avian3d/bench/: Cargo.toml
src/avian3d/bench/src/: case_registry.rs  main.rs  result_writer.rs  runner.rs  runner_args.rs  shared_visual_mode.rs
src/avian3d/cases/: avian_box_container_pile_10k_case.rs
src/bepuphysics2/: engine.json
src/bepuphysics2/bench/: BepuPhysics2.PolygonRunner.csproj  BepuPolygonRunner.cs  BepuPolygonRunnerEntrypoint.cs  BepuResultWriter.cs  BepuRunnerArgs.cs  BepuSharedVisualMode.cs
src/bepuphysics2/cases/: BepuBoxContainerPileCase.cs  BepuCaseDescriptor.cs  BepuCaseRegistry.cs
src/box3d/: engine.json
src/box3d/bench/: CMakeLists.txt  box3d_polygon_runner.cpp  box3d_result_writer.cpp  box3d_result_writer.h  box3d_runner_args.cpp  box3d_runner_args.h  box3d_shared_visual_mode.cpp  box3d_shared_visual_mode.h  box3d_visual_cli.cpp  box3d_visual_cli.h  box3d_visual_snapshot.cpp  box3d_visual_snapshot.h  box3d_visual_transport.cpp  box3d_visual_transport.h
src/box3d/cases/: box3d_box_container_pile_10k_case.cpp  box3d_box_container_pile_10k_case.h  box3d_case_registry.cpp  box3d_case_registry.h
src/joltphysics/: engine.json
src/joltphysics/bench/: CMakeLists.txt  jolt_polygon_runner.cpp  jolt_result_writer.cpp  jolt_result_writer.h  jolt_runner_args.cpp  jolt_runner_args.h  jolt_shared_visual_mode.cpp  jolt_shared_visual_mode.h
src/joltphysics/cases/: jolt_box_container_pile_10k_case.cpp  jolt_box_container_pile_10k_case.h  jolt_case_registry.cpp  jolt_case_registry.h
src/nvidia_physx34/: engine.json
src/nvidia_physx34/bench/: CMakeLists.txt  nvidia_physx34_polygon_runner.cpp  nvidia_physx34_result_writer.cpp  nvidia_physx34_result_writer.h  nvidia_physx34_runner_args.cpp  nvidia_physx34_runner_args.h  nvidia_physx34_shared_visual_mode.cpp  nvidia_physx34_shared_visual_mode.h
src/nvidia_physx34/cases/: nvidia_physx34_box_container_pile_10k_case.cpp  nvidia_physx34_box_container_pile_10k_case.h  nvidia_physx34_case_registry.cpp  nvidia_physx34_case_registry.h
src/nvidia_physx5/: engine.json
src/nvidia_physx5/bench/: CMakeLists.txt  nvidia_physx5_polygon_runner.cpp  nvidia_physx5_result_writer.cpp  nvidia_physx5_result_writer.h  nvidia_physx5_runner_args.cpp  nvidia_physx5_runner_args.h  nvidia_physx5_shared_visual_mode.cpp  nvidia_physx5_shared_visual_mode.h
src/nvidia_physx5/cases/: nvidia_physx5_box_container_pile_10k_case.cpp  nvidia_physx5_box_container_pile_10k_case.h  nvidia_physx5_case_registry.cpp  nvidia_physx5_case_registry.h
src/physx34/: engine.json  source-preparation.json
src/physx34/bench/: CMakeLists.txt  physx34_polygon_runner.cpp  physx34_result_writer.cpp  physx34_result_writer.h  physx34_runner_args.cpp  physx34_runner_args.h  physx34_shared_visual_mode.cpp  physx34_shared_visual_mode.h
src/physx34/cases/: physx34_box_container_pile_10k_case.cpp  physx34_box_container_pile_10k_case.h  physx34_case_registry.cpp  physx34_case_registry.h
src/rapier3d/: engine.json
src/rapier3d/bench/: Cargo.toml
src/rapier3d/bench/src/: case_registry.rs  main.rs  result_writer.rs  runner.rs  runner_args.rs  shared_visual_mode.rs
src/rapier3d/cases/: rapier_box_container_pile_10k_case.rs
src/rendering/: CMakeLists.txt
src/rendering/include/benchmark_visual/: imconfig.h  visual_frame_protocol.h  visual_protocol.h  visual_renderer.h  visual_transport.h
src/rendering/src/: imgui_bgfx_renderer.cpp  live_snapshot.cpp  main.cpp  physics_scene_view.cpp  platform_sdl3.cpp  renderer_bgfx.cpp  result_data.cpp  ui_live_metrics.cpp
src/unity_physics/: engine.json
src/unity_physics/Assets/Benchmark/: Bas3D.BenchmarkPolygon.UnityPhysics.asmdef
src/unity_physics/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  UnityConnectSettings.asset
src/unreal_chaos/: BenchmarkPolygonChaos.uproject  engine.json
src/unreal_chaos/Source/: BenchmarkPolygonChaosRunner.Target.cs
src/unreal_chaos/Source/BenchmarkPolygonChaosRunner/: BenchmarkPolygonChaosRunner.Build.cs
tools/: bench.py
tools/bench/: cli.py  common.py  contracts.py  host.py  host_probe_windows.ps1  options.py  release_files.py  reports.py  result_contracts.py  runner.py  visual.py
(+201 files in other folders)
