[package]
name = "avian3d_polygon_runner"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "avian3d_polygon_runner"
path = "src/main.rs"

[dependencies]
avian3d = { path = "../../../.generated/engines/avian/crates/avian3d", default-features = false, features = ["3d", "f32", "parry-f32", "parallel", "simd"] }
bevy = { version = "0.19.0", default-features = false }
rayon = "1.12"
